--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1137,7 +1137,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 
 #_content .title, #_content .chapter .title, #_content .preface .title,
 #_content .appendix .title, #_content .bibliography .title,
-#_content .reference .title, #_content .part .title {
+#_content .reference .title, #_content .part .title, #_content .glossary .title {
     font-size: 34px;
     font-weight: normal;
     padding: 30px 0 5px;
