CSS: Fix look of index pages (reported by Magic, thanks)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2367 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -70,7 +70,8 @@ html, body {
 #_fixed-header-wrap #_bubble-toc, #_content > .set, #_content > .book, 
 #_content > .article, #_content > .part, #_content > .chapter, #_content > .preface,
 #_content > .appendix, #_content > .glossary, #_content > .reference,
-#_content > .refentry, #_content > .bibliography, #_content > .page-bottom {
+#_content > .refentry, #_content > .bibliography, #_content > .index
+#_content > .page-bottom {
     margin: 0 auto;
     min-width: 400px;
     max-width: 998px;
@@ -78,7 +79,9 @@ html, body {
 
 .single #_content div.part, .single #_content div.chapter, .single #_content div.preface,
 .single #_content div.appendix, .single #_content div.glossary, .single #_content div.reference,
-.single #_content div.refentry, .single #_content div.bibliography, .single #_content div.page-bottom {
+.single #_content div.refentry, .single #_content div.bibliography, .single #_content div.index,
+.single #_content div.page-bottom
+ {
     padding-top: 40px;
 }
 
@@ -86,7 +89,7 @@ html, body {
 #_content > .article, #_content > .part, #_content > .chapter,
 #_content > .preface, #_content > .appendix, #_content > .glossary,
 #_content > .reference, #_content > .refentry, #_content > .bibliography,
-#_content > .page-bottom {
+#_content > .index, #_content > .page-bottom {
     overflow: hidden;
 }
 
@@ -1050,7 +1053,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 #_content > .set, #_content > .book, #_content > .article, #_content > .part,
 #_content > .chapter, #_content > .preface, #_content > .appendix,
 #_content > .glossary, #_content > .reference, #_content > .refentry,
-#_content > .bibliography {
+#_content > .bibliography, #_content > .index {
     padding: 0 10px;
 }
 
