XSLT_S2: add back meta info below sectione headings
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2426 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1916,18 +1916,24 @@ div.itemizedlist {
 }
 
 .doc-status {
+    padding: 10px;
+}
+
+#_content > .doc-status {
     margin: 0 auto;
     min-width: 380px;
     max-width: 978px;
-    padding: 10px;
 }
 
 .doc-status li {
     color: #000;
 }
 
-p.ds-message {
+.ds-message {
     font-style: italic;
+}
+
+p.ds-message {
     margin: 0 !important;
 }
 
