XSLT_S2: add arrows to denote architecture (thanks for making me aware, Tanja)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2432 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1372,6 +1372,39 @@ strong, b, #_content .authorgroup-label, .version-info .productname, .version-in
     font-weight: 600;
 }
 
+.arch {
+    background-color: #7DC24D;
+    border: 1px solid #439539;
+    border-radius: 3px;
+    padding: 0 4px 0 2px;
+    display: inline-block;
+    font-size: 16px;
+    height: 22px;
+    vertical-align:bottom;
+    color: #FFF;
+}
+
+.arch-arrow-start, .arch-arrow-end {
+    background-image: url(../images/icons.png);
+    background-repeat: no-repeat;
+    display: inline-block;
+    font-size: 16px;
+    height: 24px;
+    vertical-align:bottom;
+}
+
+.arch-arrow-start {
+    background-position: -24px -87px;
+    width: 16px;
+    margin-left: -3px;
+}
+
+.arch-arrow-end {
+    background-position: -44px -87px;
+    width: 28px;
+}
+
+
 #_content p, .simplelist td {
     color: #000;
     text-align: left;
