XSLT_S2: architecture arrow refinements
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2433 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1378,30 +1378,31 @@ strong, b, #_content .authorgroup-label, .version-info .productname, .version-in
     border-radius: 3px;
     padding: 0 4px 0 2px;
     display: inline-block;
-    font-size: 16px;
-    height: 22px;
+    font-size: 14px;
+    height: 20px;
     vertical-align:bottom;
     color: #FFF;
+    text-transform: uppercase;
+    line-height: 20px;
 }
 
 .arch-arrow-start, .arch-arrow-end {
     background-image: url(../images/icons.png);
     background-repeat: no-repeat;
     display: inline-block;
-    font-size: 16px;
-    height: 24px;
+    height: 22px;
     vertical-align:bottom;
 }
 
 .arch-arrow-start {
-    background-position: -24px -87px;
-    width: 16px;
+    background-position: -24px -88px;
+    width: 13px;
     margin-left: -3px;
 }
 
 .arch-arrow-end {
-    background-position: -44px -87px;
-    width: 28px;
+    background-position: -47px -88px;
+    width: 25px;
 }
 
 
