XSLT_S2: stop outline numbering inconsistency in bubble-TOC
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2435 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1225,6 +1225,10 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     color: #666;
 }
 
+#_bubble-toc .number {
+    color: #CCC;
+}
+
 #_content .permalink {
     opacity: 0;
     font-size: 75%;
