New CSS: remove Greek character set
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2494 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -3,8 +3,10 @@ Use fonts from Google (for now): http://www.google.com/webfonts#UsePlace:use/Col
 For additional support for Vietnamese, add "vietnamese," after "&subset=".
 Additional available weights are Book ("300,300italic"), Semi-bold ("500, 500italic"), and Extra-bold ("800,800italic").
 Consider page load time.
+Ideally, we could append &text=... and add a few common Greek characters, like
+alpha, beta, ... but that doesn't work together with the subset option.
 */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,600italic,400italic&subset=latin,cyrillic-ext,latin-ext,greek);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic&subset=latin-ext,cyrillic);
 
 /* Reset everything */
 /* From http://meyerweb.com/eric/tools/css/reset/, v2.0, modified */
